--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,6 +1,9 @@
-<div class="giscus">正在加载评论组件...</div>
+<div class="text-center">
+    <button id="LoadCommentsButton" class="cursor-pointer text-sm px-2.5 py-1.5 rounded bg-neutral-200/70 transition active:scale-90 dark:bg-neutral-800">「需魔法加载评论」</button>
+	<div class="giscus"></div>
+</div>
 
-<script src="https://giscus.app/client.js"
+<!-- <script src="https://giscus.app/client.js"
         data-repo="ymc0182/myblog"
         data-repo-id="R_kgDOMiAgoA"
         data-category="General"
@@ -14,4 +17,4 @@
         data-lang="zh-CN"
         crossorigin="anonymous"
         async>
-</script>
+</script> -->
