--- a/src/components/Details.astro
+++ b/src/components/Details.astro
@@ -4,9 +4,11 @@ import ArticleLayout from "../layouts/ArticleLayout.astro";
 const { title, ...res } = Astro.props;
 ---
 
-<details class="space-y-6 bg-neutral-100/70 rounded-lg px-5 py-2.5 dark:bg-neutral-800/70 backdrop-blur-xl" {...res}>
+<details class="bg-neutral-100/70 rounded-lg px-5 py-2.5 dark:bg-neutral-800/70 backdrop-blur-xl" {...res}>
     <summary class="cursor-pointer">{title}</summary>
-    <ArticleLayout>
-        <slot />
-    </ArticleLayout>
+    <div class="mt-6">
+        <ArticleLayout>
+            <slot />
+        </ArticleLayout>
+    </div>
 </details>
