--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -11,6 +11,6 @@ const { entry } = Astro.props;
 ---
 
 <article class="flex flex-col">
-    <h3 transition:name={entry.slug}><a href={`/${entry.collection}/${entry.slug}`} class="hover:text-blue-500">{entry.data.title}</a></h3>
+    <h3 transition:name={entry.id}><a href={`/${entry.collection}/${entry.id}`} class="hover:text-blue-500">{entry.data.title}</a></h3>
     <time datetime={entry.data.date.toISOString()} class="text-xs text-neutral-500 dark:text-neutral-600">{formatDate(entry.data.date)}</time>
 </article>
