--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -3,16 +3,17 @@ import { formatDate } from "../utils/formatDate";
 import PageLayout from "./PageLayout.astro";
 import AtricleLayout from "./ArticleLayout.astro";
 import Comments from "../components/Comments.astro";
+import { render } from "astro:content";
 
 const { postData } = Astro.props;
-const { Content } = await postData.render();
+const { Content } = await render(postData);
 ---
 
 <PageLayout pageName = "post" title = {postData.data.title} description = {postData.data.description}>
 
     <AtricleLayout>
         <h1 class="text-2xl mb-2" transition:name={postData.slug}>{postData.data.title}</h1>
-        <section class="flex flex-wrap gap-2.5 items-center mt-2 mb-8 text-sm text-neutral-400 dark:text-neutral-600 *:m-0">
+        <section class="flex flex-wrap gap-2.5 items-center my-4 text-sm text-neutral-400 dark:text-neutral-600 *:m-0">
             <time datetime={postData.data.date.toISOString()} class="">{formatDate(postData.data.date, 'zh')}</time>
             {postData.data.author && <span>作者：{postData.data.author}</span>}
         </section>
