--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -9,7 +9,7 @@ export async function  getStaticPaths (){
         .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 
     return posts.map((post) => ({
-        params: {slug: post.slug},
+        params: {id: post.id},
         props: post
     }));
 };
