--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,13 @@
 @import "tailwindcss";
-/* @plugin "@tailwindcss/typography"; */
+@plugin "@tailwindcss/typography";
 
-@config "../../tailwind.config.mjs";
+/* @config "../../tailwind.config.mjs"; */
 
-/* @theme {
+@theme {
     --breakpoint-sm: 30rem;
     --breakpoint-md: 42rem;
     --breakpoint-lg: 42rem;
     --breakpoint-xl: 42rem;
     --breakpoint-2xl: 42rem;
     
-} */
+}
