--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from 'astro:content';
 import { formatDate } from "../utils/formatDate";
 
 type Props = {
-    entry: CollectionEntry<'blog'>;
+    entry: CollectionEntry<'post'>;
 }
 
 const { entry } = Astro.props;
