--- a/src/components/Details.astro
+++ b/src/components/Details.astro
@@ -1,5 +1,5 @@
 ---
-import ArticleLayout from "../layouts/ArticleLayout.astro";
+import Article from "./Article.astro";
 
 const { title, ...res } = Astro.props;
 ---
@@ -7,8 +7,8 @@ const { title, ...res } = Astro.props;
 <details class="bg-neutral-100/70 rounded-lg px-5 py-2.5 dark:bg-neutral-800/70 backdrop-blur-xl" {...res}>
     <summary class="cursor-pointer">{title}</summary>
     <div class="mt-6">
-        <ArticleLayout>
+        <Article>
             <slot />
-        </ArticleLayout>
+        </Article>
     </div>
 </details>
