--- a/src/components/FriendCard.astro
+++ b/src/components/FriendCard.astro
@@ -11,17 +11,17 @@ const { entry } = Astro.props;
         </div>
     </div>
     <div class="flex flex-wrap gap-2.5 items-center *:rounded-lg *:border *:border-neutral-200 *:text-neutral-400 *:size-6 *:items-center *:flex *:justify-center *:hover:bg-neutral-200 *:dark:border-neutral-800 *:dark:text-neutral-600 *:hover:dark:bg-neutral-800">
-        {entry.social.blog && (
+        {entry.social?.blog && (
             <a href={entry.social.blog} target="_blank" title="网站">
                 <svg class="flex-shrink-0 size-3" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="4"></circle><line x1="21.17" x2="12" y1="8" y2="8"></line><line x1="3.95" x2="8.54" y1="6.06" y2="14"></line><line x1="10.88" x2="15.46" y1="21.94" y2="14"></line></svg>
             </a>
         )}
-        {entry.social.twitter && (
+        {entry.social?.twitter && (
             <a href={`https://twitter.com/${entry.social.twitter}`} target="_blank" title="Twitter">
                 <svg class="flex-shrink-0 size-3.5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path></svg>
             </a>
         )}
-        {entry.social.github && (
+        {entry.social?.github && (
             <a href={`https://github.com/${entry.social.github}`} target="_blank" title="Github">
                 <svg class="flex-shrink-0 size-3.5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
             </a>
