--- a/src/layouts/FriendsLayout.astro
+++ b/src/layouts/FriendsLayout.astro
@@ -4,7 +4,7 @@ import PageLayout from "../layouts/PageLayout.astro";
 import FriendCard from "../components/FriendCard.astro";
 import Details from "../components/Details.astro";
 
-const friends = await getCollection("friends")
+const friends = await getCollection("friend")
 
 const { frontmatter } = Astro.props
 ---
@@ -15,8 +15,8 @@ const { frontmatter } = Astro.props
     </Details>
     
     <section class="pt-8 grid gap-8 grid-cols-1 lg:grid-cols-2">
-        {friends[0].data.map(friend => (
-            <FriendCard entry={friend} />
+        {friends.map(friend => (
+            <FriendCard entry={friend.data} />
         ))}
     </section>
 </PageLayout>
