--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,12 +1,12 @@
 ---
-import ArticleLayout from "./ArticleLayout.astro";
+import Article from "../components/Article.astro";
 import PageLayout from "./PageLayout.astro";
 
 const { frontmatter  } = Astro.props
 ---
 
 <PageLayout title = {frontmatter.title} description = {frontmatter.description}>
-    <ArticleLayout>
+    <Article>
         <slot />
-    </ArticleLayout>
+    </Article>
 </PageLayout>
