--- a/src/pages/post/[...id].astro
+++ b/src/pages/post/[...id].astro
@@ -4,7 +4,7 @@ import type { CollectionEntry } from "astro:content";
 import PostLayout from "../../layouts/PostLayout.astro";
 
 export async function  getStaticPaths (){
-    const posts = (await getCollection('blog'))
+    const posts = (await getCollection('post'))
         .filter(post => !post.data.draft)
         .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 
@@ -13,7 +13,7 @@ export async function  getStaticPaths (){
         props: post
     }));
 };
-type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<'post'>;
 
 const post = Astro.props;
 ---
