--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,9 +9,9 @@ import { NAVLINKS } from "../consts";
                 <a href={link.HREF}>{link.NAME}</a>
             ))}
         </nav>
-        <div class="text-xs text-neutral-500 dark:text-neutral-600">
+        <div class="text-xs text-neutral-400 dark:text-neutral-600">
+            <p>&copy; {new Date().getFullYear()} Mr.Yuan</p>
             <p>Powered By Astro · Designed By Mr.Yuan ♥.</p>
-            <p>&copy; Mr.Yuan</p>
         </div>
     </div>
 </footer>
