--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -12,8 +12,8 @@ const { Content } = await render(postData);
 <PageLayout pageName = "post" title = {postData.data.title} description = {postData.data.description}>
 
     <Article>
-        <h1 class="text-2xl mb-2" transition:name={postData.id}>{postData.data.title}</h1>
-        <section class="flex flex-wrap gap-2.5 items-center my-4 text-sm text-neutral-400 dark:text-neutral-600 *:m-0">
+        <h1 class="text-2xl" transition:name={postData.id}>{postData.data.title}</h1>
+        <section class="flex flex-wrap gap-2.5 items-center text-sm text-neutral-400 dark:text-neutral-600 *:m-0">
             <time datetime={postData.data.date.toISOString()} class="">{formatDate(postData.data.date, 'zh')}</time>
             {postData.data.author && <span>作者：{postData.data.author}</span>}
         </section>
@@ -22,7 +22,7 @@ const { Content } = await render(postData);
 
     <section class="my-16 text-neutral-400 dark:text-neutral-600">
         <div class="flex items-center">
-            <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">End of reading</div>
+            <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">完结</div>
             <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
         </div>
         <div class="text-sm text-justify *:my-5">
