--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,13 +13,8 @@ const posts = (await getCollection("post"))
 
 <PageLayout pageName="index">
 
-<section class="space-y-8">
-    <h2 class="flex gap-2 items-center text-lg text-neutral-300 font-bold font-serif dark:text-neutral-600">Blog
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-            <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
-            <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
-        </svg>
-    </h2>
+<section class="space-y-4">
+    <h2 class="flex gap-2 items-center font-bold">最新文章</h2>
     {posts.map(post => (
         <PostCard entry={ post } />
     ))}
