--- a/src/components/FriendCard.astro
+++ b/src/components/FriendCard.astro
@@ -13,7 +13,7 @@ const { entry } = Astro.props;
     <div class="flex flex-wrap gap-2.5 items-center *:rounded-lg *:border *:border-neutral-200 *:text-neutral-400 *:size-6 *:items-center *:flex *:justify-center *:hover:bg-neutral-200 *:dark:border-neutral-800 *:dark:text-neutral-600 *:hover:dark:bg-neutral-800">
         {entry.social?.blog && (
             <a href={entry.social.blog} target="_blank" title="网站">
-                <svg class="flex-shrink-0 size-3" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="4"></circle><line x1="21.17" x2="12" y1="8" y2="8"></line><line x1="3.95" x2="8.54" y1="6.06" y2="14"></line><line x1="10.88" x2="15.46" y1="21.94" y2="14"></line></svg>
+                <svg class="flex-shrink-0 size-3.5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418" /></svg>
             </a>
         )}
         {entry.social?.twitter && (
