--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -1,9 +1,9 @@
 <!-- prose-headings:before:block prose-headings:before:h-14 prose-headings:before:-mt-14 prose-headings:before:invisible -->
 
 <article class="
-prose max-w-none prose-post prose-p:text-justify dark:prose-invert 
-prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 prose-a:hover:text-blue-500 prose-a:after:content-['_↗'] prose-a:after:text-xs
-prose-blockquote:not-italic
+prose prose-neutral max-w-none prose-post prose-p:text-justify dark:prose-invert 
+prose-a:text-neutral-400 prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 prose-a:hover:text-blue-500 prose-a:active:text-blue-500 prose-a:after:content-['_↗'] prose-a:after:text-xs dark:prose-a:text-neutral-600
+prose-blockquote:not-italic prose-blockquote:text-neutral-400 dark:prose-blockquote:text-neutral-600
 ">
     <slot />
 </article>
