--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { NAVLINKS } from "../consts";
 
 <footer class="border-t border-neutral-200/70 dark:border-neutral-800/70">
     <div class="container mx-auto p-8 space-y-4">
-        <nav class="flex flex-wrap gap-1.5 text-sm *:hover:text-blue-500">
+        <nav class="flex flex-wrap gap-1.5 text-sm *:hover:text-blue-500 *:active:text-blue-500">
             {NAVLINKS.map((link) => (
                 <a href={link.HREF}>{link.NAME}</a>
             ))}
