--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -16,7 +16,7 @@ const { title, description } = Astro.props;
 <link rel="preconnect" href="https://giscus.app" crossorigin>
 <link rel="dns-prefetch" href="https://giscus.app">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>{ title && title + " - " }{SITE.TITLE}</title>
 <meta name="description" content  = { description ? description : SITE.DESCRIPTION } />
 
