--- a/src/components/HeaderButtonBackToTop.astro
+++ b/src/components/HeaderButtonBackToTop.astro
@@ -1,4 +1,4 @@
-<button id="HeaderButtonBackToTop" class="hidden h-6 w-6 rounded-lg overflow-hidden items-center justify-center bg-neutral-200/70 transition active:scale-95 hover:bg-neutral-200 hover:cursor-pointer dark:bg-neutral-800 dark:hover:bg-neutral-700">
+<button id="HeaderButtonBackToTop" class="hidden h-6 w-6 rounded-lg overflow-hidden items-center justify-center bg-neutral-200/70 transition active:scale-95 hover:bg-neutral-200 active:bg-neutral-200 hover:cursor-pointer dark:bg-neutral-800 dark:hover:bg-neutral-700 dark:active:bg-neutral-700">
     <h2 class="sr-only">返回顶部</h2>
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
