--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -13,5 +13,5 @@ const postDate = Intl.DateTimeFormat("zh", { month: "2-digit", day:"2-digit"}).f
 
 <article class="flex gap-2">
     <time datetime={entry.data.date.toISOString()} class="shrink-0 text-neutral-400 dark:text-neutral-600">{postDate}</time>
-    <h3 class="w-full" transition:name={entry.id}><a href={`/${entry.collection}/${entry.id}`} class="hover:text-blue-500">{entry.data.title}</a></h3>
+    <h3 class="w-full" transition:name={entry.id}><a href={`/${entry.collection}/${entry.id}`} class="hover:text-blue-500 active:text-blue-500">{entry.data.title}</a></h3>
 </article>
