--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -20,7 +20,7 @@ const { Content } = await render(postData);
         <Content />
     </Article>
 
-    <section class="my-16 text-neutral-400 dark:text-neutral-600">
+    <div class="my-16 text-neutral-400 dark:text-neutral-600">
         <div class="flex items-center">
             <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">完结</div>
             <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
@@ -29,11 +29,9 @@ const { Content } = await render(postData);
             <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。</p>
             {postData.data.updateDate && <p>最后更新时间 (UTC+8)：<time datetime={postData.data.updateDate.toISOString()}>{formatDate(postData.data.updateDate, 'zh')}</time></p>}
         </div>
-    </section>
+    </div>
 
-    <section>
-        <Comments />
-    </section>
+    <Comments />
 
 </PageLayout>
 
