--- a/src/layouts/GuestbookLayout.astro
+++ b/src/layouts/GuestbookLayout.astro
@@ -11,7 +11,7 @@ const { frontmatter } = Astro.props
         <slot />
     </Details>
 
-    <section class="pt-8">
+    <div class="pt-8">
         <Comments />
-    </section>
+    </div>
 </PageLayout>
