--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -10,15 +10,19 @@ type Props = {
 const { title, description } = Astro.props;
 ---
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="description" content  = { description ? description : SITE.DESCRIPTION } />
+
+<title>{ title && title + " - " }{SITE.TITLE}</title>
 
 <link rel="icon" type="image/x-icon" href={SITE.AVATAR}>
+<link rel="sitemap" href="/sitemap-index.xml" />
 <link rel="alternate" type="application/rss+xml" title={SITE.TITLE} href={new URL("rss.xml", Astro.site)} />
+
 <link rel="preconnect" href="https://giscus.app" crossorigin>
 <link rel="dns-prefetch" href="https://giscus.app">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>{ title && title + " - " }{SITE.TITLE}</title>
-<meta name="description" content  = { description ? description : SITE.DESCRIPTION } />
+<link rel="preconnect" href="https://res.jb18.cm" crossorigin>
+<link rel="dns-prefetch" href="https://res.jb18.cm">
 
 <ClientRouter />
 
