--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import PageLayout from "../layouts/PageLayout.astro"
 import { SITE } from "../consts";
 import PostCard from "../components/PostCard.astro";
 
-const posts = (await getCollection("post"))
+const posts = (await getCollection("blog"))
 .filter(posts => !posts.data.draft)
 .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
 .slice(0, SITE.NUM_BLOG_ON_HOMEPAGE);
