--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -2,7 +2,7 @@
 import type { CollectionEntry } from 'astro:content';
 
 type Props = {
-    entry: CollectionEntry<'post'>;
+    entry: CollectionEntry<'blog'>;
 }
 
 const { entry } = Astro.props;
