--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -4,16 +4,14 @@ import type { CollectionEntry } from "astro:content";
 import PostLayout from "../../layouts/PostLayout.astro";
 
 export async function  getStaticPaths (){
-    const posts = (await getCollection('post'))
-        .filter(post => !post.data.draft)
-        .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
+    const posts = await getCollection('blog');
 
     return posts.map((post) => ({
         params: {id: post.id},
         props: post
     }));
 };
-type Props = CollectionEntry<'post'>;
+type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 ---
