--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,3 +15,7 @@ import { NAVLINKS } from "../consts";
         </div>
     </div>
 </footer>
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dccf5e9bdc5a4128996e55fdc4c05418"}'></script>
+<!-- End Cloudflare Web Analytics -->
