--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content"
 import PageLayout from "../layouts/PageLayout.astro"
 import { SITE } from "../consts";
-import PostCard from "../components/PostCard.astro";
+import BlogCard from "../components/BlogCard.astro";
 
 const posts = (await getCollection("blog"))
 .filter(posts => !posts.data.draft)
@@ -16,7 +16,7 @@ const posts = (await getCollection("blog"))
 <section class="space-y-4">
     <h2 class="flex gap-2 items-center font-bold">最新文章</h2>
     {posts.map(post => (
-        <PostCard entry={ post } />
+        <BlogCard entry={ post } />
     ))}
 </section>
 
