--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content"
 import PageLayout from "../../layouts/PageLayout.astro"
-import PostCard from "../../components/PostCard.astro";
+import BlogCard from "../../components/BlogCard.astro";
 
 const posts = (await getCollection("blog"))
 .filter(posts => !posts.data.draft)
@@ -24,7 +24,7 @@ const sortedYears = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseI
             <section class="space-y-4">
                 <h2 class="font-bold">{year}</h2>
                 {postsByYear[year].map(post => (
-                    <PostCard entry={post} />
+                    <BlogCard entry={post} />
                 ))}
             </section>
         ))}
