--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -5,10 +5,9 @@ import { ClientRouter } from "astro:transitions";
 type Props = {
   title: string;
   description: string;
-  pageName: string;
 };
 
-const { title, description, pageName } = Astro.props;
+const { title, description } = Astro.props;
 ---
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
