--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -4,6 +4,7 @@
 prose prose-neutral max-w-none prose-post prose-p:text-justify dark:prose-invert 
 prose-a:text-neutral-400 prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 prose-a:hover:text-blue-500 prose-a:active:text-blue-500 prose-a:after:content-['_↗'] prose-a:after:text-xs dark:prose-a:text-neutral-600
 prose-blockquote:not-italic prose-blockquote:text-neutral-400 dark:prose-blockquote:text-neutral-600
+prose-kbd:py-0 prose-kbd:border prose-kbd:bg-neutral-100 prose-kbd:border-neutral-200 dark:prose-kbd:bg-neutral-800 dark:prose-kbd:border-neutral-700
 ">
     <slot />
 </article>
